styles.css
body {
    display: flex;
    flex-direction: column;
    margin: 0;
}

.hero {
    background-color: #1F2937;
    height: 600px;
    display: flex;
    justify-content: center;
}

.container {
    height: 450px;
    width: 75%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.header {
    display: flex;
    height: 50px;
    justify-content: space-between;
    align-items: center;
}

.logo {
    font-size: 24px;
    font-weight: 900;
    color: #f9faf8;
}

a {
    text-decoration-line: none;
    color: #f9faf8;
    font-size: 18px;
}

ul {
    list-style-type: none;
    display: flex;
    gap: 30px;
    padding: 0;
    margin: 0;
    border: 0;
}

.box {
    display: flex;
    justify-content: space-between;
}

.main {
    display: flex;
    flex-direction: column;
    flex-basis: 450px;

}

.title {
    font-size: 48px;
    font-weight: 900;
    color: #f9faf8;
}

.para {
    font-size: 18px;
    color: #e5e7eb;
    margin-bottom: 10px;
}

.sign-up-top {
    color: #e5e7eb;
    font-weight: 700;
    background-color: #3882f6;
    padding: 10px;
    width: 120px;
    border-radius: 10px;
}

.hills {
    width: 500px;
    height: auto;
}

.information {
    min-height: 500px;
    display: flex;
    flex-direction: column;
    align-items: center;
}


.info-title {
    font-size: 36px;
    font-weight: bold;
    color: #1F2937;
    padding: 50px;
}

.info-box {
    display: flex;
    flex-wrap: wrap;
    gap: 50px;
}

.info-box .item img {
    width: 200px;
    height: 200px;
    border: solid;
    border-radius: 20px;
    border-color: #3882F6;
}

.info-box div .text {
    text-align: center;
}

.quote {
    background-color: #e5e7eb;
    height: 400px;
    min-width: 700px;
    padding: 0 450px;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.quote .text {
    display: flex;
    font-size: 36px;
    font-weight: lighter;
    font-style: italic;
    color: #1F2937;
}

.quote .author {
    display: flex;
    align-self: flex-end;
    font-size: 30px;
    font-weight: bold;

}


.background {
    height: 350px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.call-to-action {
    background-color: #3882F6;
    height: 150px;
    width: 75%;
}

.footer {
    background-color: #1F2937;
    height: 100px;
}

